--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
     <aside>
         <h1>Sidebar header</h1>
+
+        <ul>
+            <li>Item 1</li>
+            <li>Item 1</li>
+            <li>Item 1</li>
+            <li>Item 1</li>
+        </ul>
     </aside>
 </body>
 </html>
